# my-alpaca-ctf

./: .clang-format  .gitignore  README.md  biome.json  lefthook.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.devcontainer/: .bashrc  .gdbinit  devcontainer-lock.json  devcontainer.json  setup.sh
2025-12/09-daily-hit-and-miss/: README.md  solve.py
2025-12/13-daily-safe-prime/: README.md  solve.ipynb
2026-01/15-daily-five-alpacas/: README.md  solve.py
2026-01/19-daily-chachacha/: README.md  solve.py
2026-01/24-daily-paca-paca-authenticator/: README.md  solve.py
2026-01/26-daily-git-gc/: README.md
2026-01/27-daily-toypqc/: README.md  cvp_babai.ipynb  cvp_kannan.ipynb  solve.ipynb  test.ipynb
2026-01/29-daily-shellcode-101/: .gdbinit  README.md  execve.s
2026-01/30-daily-linear-coffee-generator/: README.md  solve.ipynb
2026-02/02-daily-substance/: README.md  solve.ipynb
2026-02/03-daily-read-a-binary/: README.md
2026-02/04-daily-magic-engine/: README.md
2026-02/05-daily-rre-time-limiter/: README.md  solve.py
2026-02/07-daily-misdirection/: analyze.py
2026-02/08-daily-compressor/: README.md  solve.py
2026-02/28-daily-pyjs/: test.py  (+2 more)
containers/: .gdbinit  flag.txt  ilspycmd.dockerfile  one_gadget.dockerfile  pwndbg.dockerfile  pypy-jupyter.dockerfile  radare2.dockerfile  seccomp.json
notes/: x86-64-elf.md
scripts/: README.md  build-container.sh  check-publish-dates.sh  copy-libc.sh  docker-ipykernel.ts  get-challenge-dir.sh  new-challenge.sh  new-challenge.ts  rebase-branches.sh  run-container.sh  run-sage-jupyter.sh
(+249 files in other folders)
