[project]
name = "alpaca-ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "galois>=0.4.10",
    "ipykernel>=7.2.0",
    "numba>=0.61.0",
    "numpy>=2.4.3",
    "pwntools>=4.15.0",
    "cysignals>=1.12.6",
    "fpylll>=0.6.4",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
]
