[project]
name = "alpaca-ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "galois>=0.4.10",
    "ipykernel>=7.2.0",
    "numba>=0.61.0",
    "numpy>=2.4.3",
    "pwntools>=4.15.0",
    "fpylll>=0.6.4",
    "pycryptodome>=3.23.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "lark>=1.3.1",
    "pillow>=12.2.0",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.uv]
exclude-newer = "2 week"
